feat: compose tracker and log body fat
